# ligature

./: .actrc  .clippy.toml  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README-LLM.md  README.md  TODO-TRACKING-GUIDE.md  TODO-TRACKING.md  WORKSPACE.md  WORKSPACE_MIGRATION_PROMPT.md  codecov.yml  cspell.config.yaml  error_handling_progress.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
apps/baton/: Cargo.toml  README.md
apps/baton/src/: main.rs
apps/cacophony/: CRATE_SPLIT_PROPOSAL.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TODO.md
apps/cacophony/src/: cli.rs  collection.rs  config.rs  environment.rs  error.rs  ligature_loader.rs  main.rs  operation.rs  plugin.rs  xdg_config.rs
apps/keywork/: Cargo.toml  README.md
apps/keywork/src/: commands.rs  dependency.rs  lib.rs  main.rs  register.rs  registry.rs  xdg_config.rs
apps/keywork/test-deps/: register.toml
apps/keywork/tests/: register_tests.rs  semver_tests.rs
apps/performance-monitor/: Cargo.toml
apps/performance-monitor/src/: main.rs
apps/reed/: Cargo.toml  README.md  TODO.md
apps/reed/src/: benchmark.rs  main.rs  xdg_config.rs
crates/baton-client/: Cargo.toml
crates/baton-client/src/: client.rs  config.rs  connection.rs  lib.rs  stats.rs  utils.rs
crates/baton-core/: Cargo.toml
crates/baton-core/src/: lib.rs
crates/baton-engine-plugin/: Cargo.toml  README.md
crates/baton-engine-plugin/examples/: basic_usage.rs
crates/baton-engine-plugin/src/: engine.rs  generic.rs  lib.rs  manager.rs  specification.rs  traits.rs
crates/baton-error/: Cargo.toml
crates/baton-error/src/: context.rs  error.rs  lib.rs
crates/baton-protocol/: Cargo.toml
crates/baton-protocol/src/: impls.rs  lib.rs  types.rs
crates/baton-specification/: Cargo.toml
crates/baton-specification/src/: lib.rs  specification.rs  types.rs
crates/baton-verification/: Cargo.toml
crates/baton-verification/src/: engine.rs  lib.rs  types.rs
crates/cacophony-config/: Cargo.toml
crates/cacophony-config/src/: lib.rs  manager.rs  validation.rs  xdg.rs
crates/cacophony-core/: Cargo.toml
crates/cacophony-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/cacophony-plugin/: Cargo.toml  README.md
crates/cacophony-plugin/src/: lib.rs  manager.rs  terraform.rs
crates/embouchure-checker/: Cargo.toml  README.md
crates/embouchure-checker/src/: checker.rs  constraints.rs  environment.rs  error.rs  lib.rs  resolver.rs
crates/ligature-ast/: Cargo.toml
crates/ligature-ast/src/: decl.rs  error.rs  error_utils.rs  expr.rs  lib.rs  span.rs  ty.rs
crates/ligature-error/: Cargo.toml
crates/ligature-error/src/: context.rs  error.rs  lib.rs  reporter.rs  result.rs
crates/ligature-eval/: Cargo.toml  TODO.md
crates/ligature-eval/benches/: eval_benchmarks.rs
crates/ligature-eval/examples/: async_evaluation_example.rs
crates/ligature-eval/src/: adaptive_optimizer.rs  advanced_optimizations.rs  async_evaluator.rs  benchmarks.rs  concurrent.rs  concurrent_type_checker.rs  config.rs  enhanced_async_evaluator.rs  environment.rs  error.rs  evaluator.rs  lib.rs  memory.rs  parallel.rs  performance.rs  resolver.rs  validation.rs  value.rs
crates/ligature-lsp/: Cargo.toml  README.md  TODO.md  updated_config.json
crates/ligature-lsp/examples/: config_example.json  configuration_and_workspace_example.rs  enhanced_lsp_example.rs
crates/ligature-lsp/src/: async_evaluation.rs  code_actions.rs  completion.rs  config.rs  definition.rs  diagnostics.rs  enhanced_completion.rs  enhanced_diagnostics.rs  enhanced_server.rs  formatting.rs  hover.rs  import_resolution.rs  inlay_hints.rs  lib.rs  main.rs  references.rs  rename.rs  server.rs  server_simple.rs  symbols.rs  workspace.rs  xdg_config.rs
crates/ligature-parser/: Cargo.toml  README.md
crates/ligature-parser/benches/: parser_benchmarks.rs
crates/ligature-parser/fuzz/: Cargo.toml  README.md
crates/ligature-parser/src/: error.rs  fuzzing.rs  grammar.rs  lib.rs  parser.rs  test_type_class.rs
crates/ligature-types/: Cargo.toml
crates/ligature-types/src/: benchmarks.rs  checker.rs  constraints.rs  environment.rs  error.rs  inference.rs  lib.rs  module_tests.rs  refinement_type_tests.rs  resolver.rs  resolver_tests.rs  type_class_tests.rs  type_system_enhancements_tests.rs  union_type_inference_tests.rs
crates/ligature-xdg/: Cargo.toml
crates/ligature-xdg/examples/: basic_usage.rs
crates/ligature-xdg/src/: config.rs  error.rs  hot_reload.rs  lib.rs  paths.rs  validation.rs
engines/lean/: Cargo.toml  README.md
engines/lean/examples/: basic_usage.rs
engines/lean/spec/: README.md  TestSpec.lean  lake-manifest.json  lakefile.lean
examples/: Cargo.toml  advanced_optimizations_example.rs  advanced_subtyping_example.lig  benchmark_example.lig  concurrent_access_example.rs  config_usage_example.rs  constrained_instance_example.lig  constraint_validation_examples.lig  debug_grammar.rs  debug_if_parsing.rs  debug_lean_communication.rs  debug_operator_parsing.rs  debug_parser.rs  debug_pest.rs  debug_union_pattern.rs  debug_union_test.rs  enhanced_differential_test_example.rs  error_handling_example.rs  error_handling_examples.rs  evaluator_config_example.json  evaluator_config_example.toml  evaluator_config_example.yaml  expression_caching_config_example.rs  function_call_benchmark.rs  function_call_performance_test.rs  import_resolution_example.lig  krox_example.rs  lean_integration_example.rs  math_utils.lig  memory_tracking_demo.rs  performance_benchmark.rs  performance_monitoring_example.rs  performance_optimization_benchmark.rs  runtime_validation_example.rs  simple_constrained_test.lig  simple_lean_test.rs  simple_performance_test.rs  simple_union_test.rs  test_advanced_union_patterns.rs  test_caching.rs  (+22 more)
examples/config/: README.md  cacophony.toml  configuration_management_example.rs  ligature-cli.toml  lsp-server.toml
krox/: Cargo.toml  README.md  TODO.md
krox/krox-rs/: README.md
krox/src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  sdk.rs
(+356 files in other folders)
