[workspace]
resolver = "2"
members = [
  "apps/baton",
  "apps/cacophony",
  "apps/keywork",
  "apps/performance-monitor",
  "apps/reed",
  "crates/baton-client",
  "crates/baton-core",
  "crates/baton-error",
  "crates/baton-protocol",
  "crates/baton-specification",
  "crates/baton-verification",
  "crates/cacophony-config",
  "crates/cacophony-core",
  "crates/cacophony-plugin",
  "crates/embouchure-xdg",
  "crates/ligature-ast",
  "crates/ligature-eval",
  "crates/ligature-lsp",
  "crates/ligature-parser",
  "crates/ligature-types",
  "examples",
  "krox",
  "tests/performance_validation",
]
exclude = []

[workspace.package]
version = "0.1.0"
authors = ["Ligature Language Team"]
edition = "2024"
description = "A Turing-incomplete configuration and data management language"
repository = "https://github.com/ligature-lang/ligature"
license = "Apache-2.0"
keywords = ["compiler", "configuration", "language", "type-system"]
categories = ["configuration", "development-tools"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
# CLI
clap = { version = "4.4", features = ["derive"] }
# Testing frameworks
criterion = "0.5"
fake = "2.9"
indexmap = "2.0"
# Internal crates
ligature-ast = { path = "crates/ligature-ast" }
ligature-eval = { path = "crates/ligature-eval" }
ligature-parser = { path = "crates/ligature-parser" }
lsp-types = "0.94"
miette = { version = "5.0", features = ["fancy"] }
mockall = "0.12"
# Utilities
once_cell = "1.19"
# Parsing
pest = "2.7"
pest_derive = "2.7"
# Property testing
proptest = "1.3"
# Krox dependencies
reqwest = { version = "0.11", features = ["json"] }
rstest = "0.18"
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Memory profiling
sysinfo = "0.29"
tempfile = "3.8"
test-case = "3.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
toml = "0.8"
# LSP
tower-lsp = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
which = "6.0"
xdg = "2.5"

[workspace.features]
default = []
lean-integration = [
  "baton-client",
  "baton-protocol",
  "baton-verification",
  "baton-specification",
  "baton-core",
  "baton-error",
]