[package]
name = "baton"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Baton formal verification"
license = "Apache-2.0"

[dependencies]
baton-core = { path = "../../crates/baton-core" }
baton-error = { path = "../../crates/baton-error" }
baton-protocol = { path = "../../crates/baton-protocol" }
baton-client = { path = "../../crates/baton-client" }
baton-specification = { path = "../../crates/baton-specification" }
baton-verification = { path = "../../crates/baton-verification" }
ligature-parser = { path = "../../crates/ligature-parser" }
ligature-eval = { path = "../../crates/ligature-eval" }
ligature-types = { path = "../../crates/ligature-types" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0" 