[package]
name = "baton-client"
version = "0.1.0"
edition = "2021"
description = "Generic client for Baton formal verification"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
baton-core = { path = "../baton-core" }
baton-engine-plugin = { path = "../baton-engine-plugin" }
baton-error = { path = "../baton-error" }
baton-protocol = { path = "../baton-protocol" }
path-absolutize = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }