[package]
name = "baton-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for Baton formal verification"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] } 