[package]
name = "baton-engine-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin interface for Baton verification engines"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
baton-core = { path = "../baton-core" }
baton-error = { path = "../baton-error" }
baton-protocol = { path = "../baton-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }