[package]
name = "baton-error"
version = "0.1.0"
edition = "2021"
description = "Error types for Baton formal verification"
license = "Apache-2.0"

[dependencies]
baton-core = { path = "../baton-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0" 