[package]
name = "cacophony-config"
version = "0.1.0"
edition = "2021"
authors = ["Ligature Team"]
description = "Configuration management for the Cacophony orchestration system"
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/ligature"

[dependencies]
cacophony-core = { path = "../cacophony-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs"] } 