[package]
name = "cacophony-core"
version = "0.1.0"
edition = "2021"
authors = ["Ligature Team"]
description = "Core types and traits for the Cacophony orchestration system"
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/ligature"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0" 