[package]
name = "cacophony-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Ligature Team"]
description = "Plugin system for Cacophony CLI tool"
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/ligature"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tempfile = "3.8"

# Terraform dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio-util = "0.7"
bytes = "1.4"

# Cacophony core dependencies
cacophony-core = { path = "../cacophony-core" }

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"

[features]
default = []
test-utils = [] 