[package]
name = "ligature-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Abstract Syntax Tree for the Ligature language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
indexmap = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }