[package]
name = "ligature-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Evaluation engine for the Ligature language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
embouchure-xdg = { path = "../embouchure-xdg" }
indexmap = { workspace = true }
ligature-ast = { path = "../ligature-ast" }
ligature-parser = { path = "../ligature-parser" }
ligature-types = { path = "../ligature-types" }
miette = { workspace = true, features = ["fancy"] }
num_cpus = "1.0"
rand = "0.8"
# Validation dependencies
regex = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
# Memory profiling dependencies
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = "0.8"
# Concurrent data structures
dashmap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true }