[package]
name = "ligature-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for the Ligature language"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true



[[bin]]
name = "ligature-lsp"
path = "src/main.rs"

[dependencies]
ligature-ast = { path = "../ligature-ast" }
ligature-parser = { path = "../ligature-parser" }
ligature-types = { path = "../ligature-types" }
ligature-eval = { path = "../ligature-eval" }
embouchure-xdg = { path = "../embouchure-xdg" }
tower-lsp = { workspace = true }
lsp-types = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } 
tempfile.workspace = true
num_cpus = "1.0"
async-trait = "0.1"
