[package]
name = "ligature-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for the Ligature language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ligature-lsp"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
embouchure-xdg = { path = "../embouchure-xdg" }
ligature-ast = { path = "../ligature-ast" }
ligature-error = { path = "../ligature-error" }
# ligature-eval = { path = "../ligature-eval" }
ligature-parser = { path = "../ligature-parser" }
# ligature-types = { path = "../ligature-types" }
lsp-types = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
num_cpus = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

