[package]
name = "ligature-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Parser for the Ligature language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["../../.lang/grammar.pest", "src/**/*"]

[[bin]]
name = "test_type_class"
path = "src/test_type_class.rs"

[dependencies]
ligature-ast = { path = "../ligature-ast" }
miette = { workspace = true, features = ["fancy"] }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }