[package]
name = "ligature-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Parser for the Ligature language"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["../../.lang/grammar.pest", "src/**/*"]

[[bin]]
name = "test_type_class"
path = "src/test_type_class.rs"

[dependencies]
anyhow.workspace = true
ligature-ast = { path = "../ligature-ast" }
ligature-error = { path = "../ligature-error" }
pest = { workspace = true }
pest_derive = { workspace = true }
# Fuzzing dependencies
proptest = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }

[features]
fuzzing = ["proptest", "rand"]