[package]
name = "ligature-xdg"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "XDG base directory support for Ligature components"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xdg = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time"] }
anyhow = { workspace = true }
notify = "6.1"
regex = "1.10"
url = "2.4"
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tempfile = "3.8" 