[package]
name = "baton-lean-engine"
version = "0.1.0"
edition = "2021"
description = "Lean verification engine plugin for Baton"
license = "Apache-2.0"

[[example]]
name = "lean_basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
baton-client = { path = "../../crates/baton-client" }
baton-core = { path = "../../crates/baton-core" }
baton-engine-plugin = { path = "../../crates/baton-engine-plugin" }
baton-error = { path = "../../crates/baton-error" }
baton-protocol = { path = "../../crates/baton-protocol" }
baton-verification = { path = "../../crates/baton-verification" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }